lots of little things: botlogo was missing links, the tabs in the tab bar popped up multiple times, many of the search indexes were missing titles; fixed the issue with certain screens not wrapping. refs #231 and #209
git-svn-id: https://svn.test.lso.umsystem.edu/misc/merlin_webpac/trunk@1549 243b6f06-4adc-0310-b70d-e36f471213ad

--- a/src/merlin_styles.css
+++ b/src/merlin_styles.css
@@ -451,7 +451,7 @@ TABLE.bibSearchtool { border: 1px solid #ffffff; }
 
 .bibTOC { width: 95%; border: 0px; background-color: #FFFFFF; color: #000000; text-align: left; white-space: nowrap; }
 
-.bibContent { border: 0px; text-align: left; white-space: nowrap; }
+.bibContent { border: 0px; text-align: left;}
 
 TABLE.bibWidgit { border: 1px solid #ffffff; }
 
